fix: top k order bug